Refs #1931: IE8 fix: too much padding for tabbed-menu tab name

--- a/cms_frontend/css/ie/ie8-custom.css
+++ b/cms_frontend/css/ie/ie8-custom.css
@@ -314,3 +314,18 @@ color: red; /* for warning text about IE8 not supporting SVG maps */
 .global-menu-bar.collapse {
 display: block;
 }
+
+.global-menu-bar.navbar-collapse {
+border-top-width: 0px;
+max-width: 970px;
+}
+
+.small-logos {
+width: 71px;
+}
+
+.ui-tabs .ui-tabs-nav li a {
+padding-left: 0;
+padding-right: 0;
+}
+
